# goodputlab

./: .gitignore  AUDIT.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  RUNPOD.md  docker-compose.yml  provision.sh  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  RUNPOD.md  STATE.md  config.json
autoscaler/: TUNING.md
bench/: cell_runner.py  figures.py  matrix_aggregator.py  matrix_report.py  mock_vllm.py  ollama_smoke.py  orchestrator.py  preflight.py  router_bench.py  runpod_matrix.py
configs/: kv_consumer.json  kv_lmcache_consumer.json  kv_lmcache_producer.json  kv_producer.json  lmcache_decode.yaml  lmcache_prefill.yaml  runpod_context_repair.yaml  runpod_matrix.yaml  runpod_matrix_full.yaml  runpod_paired_chat.yaml  runpod_paired_disagg.yaml  runpod_smoke.yaml  runpod_v11.yaml
control/: __init__.py  autoscaler.py  pid.py  pool.py  router.py
core/: __init__.py  metrics.py  reconcile.py  trace.py
docs/: GAP_REPORT.md  GPU_COST_OPTIMIZATION.md  GPU_EXECUTION_PLAN.md  REPORT.md
kv/: lmcache_client.py  tier_policy.py
loadgen/: __init__.py  agentic.py  arrival.py  chat.py  client.py  rag.py  replay.py  sse.py  synth_text.py
obs/: registry.py  server.py
scripts/: __init__.py  autoscaler_live.py  check_origin_clean.sh  disagg_proxy.py  health.sh  pull_model.sh  real_bench.py  run_matrix.py  sentinel_daemon.py  sweep_report.py
spec/: eagle.py
tests/: conftest.py  sentinel.py  test_agentic_generator.py  test_arrival.py  test_autoscaler.py  test_autoscaler_live.py  test_autoscaler_thrash.py  test_kv.py  (+41 more)
(+277 files in other folders)
